k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca-30x30
  namespace: biodiversity
  labels:
    app: ca-30x30
spec:
  type: ClusterIP
  selector:
    app: ca-30x30
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
